meta description updated

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Real World Tech Center offers hands-on STEM training where students build real projects beyond the breadboard, emphasizing prototype development and innovation. Our after-project support delivers MVP testing, IP protection (patents, copyright), commercialization, and networking opportunities to help turn your product market-ready. Join our weekend classes, STEM vacation programs, and specialized training for SHS, primary/JHS, and post-SHS students."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/rtic.png" />
     <!--
